--- a/imageroot/systemd/user/kickstart-app.service
+++ b/imageroot/systemd/user/kickstart-app.service
@@ -4,9 +4,9 @@
 #
 
 [Unit]
-Description=Podman  kickstart-app.service
-BindsTo=kickstart.service
-After=kickstart.service postgresql-app.service
+Description=Podman  tacticalrmm-app.service
+BindsTo=tacticalrmm.service
+After=tacticalrmm.service postgresql-app.service
 
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
@@ -16,21 +16,21 @@ WorkingDirectory=%S/state
 Restart=always
 TimeoutStopSec=70
 ExecStartPre=/bin/mkdir -p config
-ExecStartPre=/bin/rm -f %t/kickstart-app.pid %t/kickstart-app.ctr-id
+ExecStartPre=/bin/rm -f %t/tacticalrmm-app.pid %t/tacticalrmm-app.ctr-id
 ExecStartPre=-runagent discover-smarthost
-ExecStart=/usr/bin/podman run --conmon-pidfile %t/kickstart-app.pid \
-    --cidfile %t/kickstart-app.ctr-id --cgroups=no-conmon \
-    --pod-id-file %t/kickstart.pod-id --replace -d --name  kickstart-app \
-    --volume kickstart-app:/var/www/html/:Z \
+ExecStart=/usr/bin/podman run --conmon-pidfile %t/tacticalrmm-app.pid \
+    --cidfile %t/tacticalrmm-app.ctr-id --cgroups=no-conmon \
+    --pod-id-file %t/tacticalrmm.pod-id --replace -d --name  tacticalrmm-app \
+    --volume tacticalrmm-app:/var/www/html/:Z \
     --volume ./config:/tmp:Z \
     --env=NGINX_* \
-    --env 'CONFIG_DATABASE_URI="postgresql://postgres:Nethesis,1234@127.0.0.1:5432/kickstart"' \
+    --env 'CONFIG_DATABASE_URI="postgresql://postgres:Nethesis,1234@127.0.0.1:5432/tacticalrmm"' \
     ${NGINX_IMAGE}
-ExecStop=/usr/bin/podman stop --ignore --cidfile %t/kickstart-app.ctr-id -t 10
-ExecReload=/usr/bin/podman kill -s HUP kickstart-app
+ExecStop=/usr/bin/podman stop --ignore --cidfile %t/tacticalrmm-app.ctr-id -t 10
+ExecReload=/usr/bin/podman kill -s HUP tacticalrmm-app
 SyslogIdentifier=%u
-ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/kickstart-app.ctr-id
-PIDFile=%t/kickstart-app.pid
+ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/tacticalrmm-app.ctr-id
+PIDFile=%t/tacticalrmm-app.pid
 Type=forking
 
 [Install]
