added after tactical-init.service

--- a/imageroot/systemd/user/tactical-nats.service
+++ b/imageroot/systemd/user/tactical-nats.service
@@ -6,7 +6,7 @@
 [Unit]
 Description=Podman tactical-nats.service
 BindsTo=tacticalrmm.service
-After=tacticalrmm.service
+After=tacticalrmm.service tactical-init.service
 
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
