--- a/imageroot/systemd/user/tactical-meshcentral.service
+++ b/imageroot/systemd/user/tactical-meshcentral.service
@@ -11,6 +11,8 @@ After=tacticalrmm.service mongodb-app.service
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
 EnvironmentFile=%S/state/environment
+EnvironmentFile=%S/state/meshcentral-db.env
+EnvironmentFile=%S/state/mongo.env
 # EnvironmentFile=%S/state/secrets/passwords.secret
 Restart=always
 TimeoutStopSec=70
@@ -23,6 +25,7 @@ ExecStart=/usr/bin/podman run --conmon-pidfile %t/tactical-meshcentral.pid \
     --volume mesh_data:/home/node/app/meshcentral-data:Z \
     --env-file=%S/state/meshcentral-db.env \
     --env-file=%S/state/mesh-config.env \
+    --env MONGO_URL=mongodb://${MONGODB_USER}:${MONGODB_PASS}@mongodb-app:27017/tacticalrmm \
     ${TACTICAL_MESHCENTRAL_IMAGE}
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/tactical-meshcentral.ctr-id -t 10
 ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/tactical-meshcentral.ctr-id
