--- a/imageroot/systemd/user/postgresql-app.service
+++ b/imageroot/systemd/user/postgresql-app.service
@@ -21,6 +21,7 @@ ExecStart=/usr/bin/podman run --conmon-pidfile %t/postgresql-app.pid \
     --pod-id-file %t/tacticalrmm.pod-id --replace -d --name postgresql-app \
     --env-file=%S/state/database.env \
     --volume postgres-data:/var/lib/postgresql/data:Z \
+    --volume postgres-data:/var/lib/postgresql/:Z \
     --volume %S/state/restore/:/docker-entrypoint-initdb.d/:Z \
     --env TZ=UTC \
     ${POSTGRES_IMAGE}
