--- a/imageroot/systemd/user/tactical-init.service
+++ b/imageroot/systemd/user/tactical-init.service
@@ -6,7 +6,7 @@
 [Unit]
 Description=Podman tactical-init.service
 BindsTo=tacticalrmm.service
-After=tacticalrmm.service postgresql-app.service redis-app.service mongodb-app.service 
+After=tacticalrmm.service postgresql-app.service redis-app.service
 
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
@@ -25,7 +25,8 @@ ExecStart=/usr/bin/podman run --conmon-pidfile %t/tactical-init.pid \
     --volume mongo_data:/mongo/data/db:Z \
     --volume redis_data:/redis/data:Z \
     --env-file=%S/state/tactical-init-db.env \
-    --env-file=%S/state/tactical-init-config.env \
+    --env-file=%S/state/tactical.env \
+    --env-file=%S/state/mesh_config.env \
     ${TACTICAL_IMAGE} tactical-init
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/tactical-init.ctr-id -t 10
 ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/tactical-init.ctr-id
