--- a/imageroot/systemd/user/tacticalrmm.service
+++ b/imageroot/systemd/user/tacticalrmm.service
@@ -10,7 +10,8 @@
 
 [Unit]
 Description=Podman tacticalrmm.service
-Requires=postgresql-app.service redis-app.service tactical-init.service tactical-nats.service tactical-backend.service tactical-websockets.service tactical-frontend.service tactical-celerybeat.service tactical-celery.service
+Wants=tactical-init.service 
+Requires=postgresql-app.service redis-app.service tactical-nats.service tactical-backend.service tactical-websockets.service tactical-frontend.service tactical-celerybeat.service tactical-celery.service
 Before=postgresql-app.service redis-app.service tactical-init.service tactical-nats.service tactical-backend.service tactical-websockets.service tactical-frontend.service tactical-celerybeat.service tactical-celery.service
 
 [Service]
@@ -22,7 +23,8 @@ ExecStartPre=/bin/rm -f %t/tacticalrmm.pid %t/tacticalrmm.pod-id
 ExecStartPre=/usr/bin/podman pod create --infra-conmon-pidfile %t/tacticalrmm.pid \
     --pod-id-file %t/tacticalrmm.pod-id \
     --name tacticalrmm \
-    --publish 127.0.0.1:${TCP_PORT}:80 \
+    --publish 127.0.0.1:${TCP_PORT}:8080 \
+    --publish 127.0.0.1:${API_TCP_PORT}:8080 \
     --replace
 ExecStart=/usr/bin/podman pod start --pod-id-file %t/tacticalrmm.pod-id
 ExecStop=/usr/bin/podman pod stop --ignore --pod-id-file %t/tacticalrmm.pod-id -t 10
