--- a/imageroot/systemd/user/tacticalrmm.service
+++ b/imageroot/systemd/user/tacticalrmm.service
@@ -10,8 +10,8 @@
 
 [Unit]
 Description=Podman tacticalrmm.service
-Wants=tactical-init.service tactical-websockets.service tactical-celerybeat.service tactical-celery.service
-Requires=postgresql-app.service redis-app.service tactical-nats.service tactical-backend.service  tactical-frontend.service 
+Wants= tactical-websockets.service tactical-celerybeat.service tactical-celery.service
+Requires=postgresql-app.service redis-app.service tactical-init.service tactical-nats.service tactical-backend.service  tactical-frontend.service 
 Before=postgresql-app.service redis-app.service tactical-init.service tactical-nats.service tactical-backend.service tactical-websockets.service tactical-frontend.service tactical-celerybeat.service tactical-celery.service
 
 [Service]
