--- a/imageroot/systemd/user/tacticalrmm.service
+++ b/imageroot/systemd/user/tacticalrmm.service
@@ -11,8 +11,8 @@
 [Unit]
 Description=Podman tacticalrmm.service
 Wants=tactical-init.service tactical-websockets.service tactical-celerybeat.service tactical-celery.service
-Requires=postgresql-app.service redis-app.service  tactical-nats.service tactical-backend.service  tactical-frontend.service 
-Before=postgresql-app.service redis-app.service tactical-init.service tactical-nats.service tactical-backend.service tactical-websockets.service tactical-frontend.service tactical-celerybeat.service tactical-celery.service
+Requires=postgresql-app.service redis-app.service  tactical-nats.service tactical-backend.service  tactical-frontend.service mongodb-app.service  meshcentral-app.service
+Before=postgresql-app.service redis-app.service mongodb-app.service meshcentral-app.service tactical-init.service tactical-nats.service tactical-backend.service tactical-websockets.service tactical-frontend.service tactical-celerybeat.service tactical-celery.service
 
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
