--- a/imageroot/systemd/user/meshcentral-app.service
+++ b/imageroot/systemd/user/meshcentral-app.service
@@ -6,7 +6,7 @@
 [Unit]
 Description=Podman meshcentral-app.service
 BindsTo=tacticalrmm.service
-After=tacticalrmm.service 
+After=tacticalrmm.service mongodb-app.service
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
 EnvironmentFile=%S/state/environment
