--- a/imageroot/systemd/user/meshcentral-app.service
+++ b/imageroot/systemd/user/meshcentral-app.service
@@ -21,6 +21,7 @@ ExecStart=/usr/bin/podman run --conmon-pidfile %t/meshcentral-app.pid \
     --volume tactical_data:/opt/tactical:Z \
     --volume mesh_data:/home/node/app/meshcentral-data:Z \
     --env-file=%S/state/mesh_config.env \
+    --env-file=%S/state/mesh.env \
      ${TACTICAL_MESHCENTRAL_IMAGE}
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/meshcentral-app.ctr-id -t 10
 ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/meshcentral-app.ctr-id
