fix: removed bindings

--- a/imageroot/systemd/user/tacticalrmm.service
+++ b/imageroot/systemd/user/tacticalrmm.service
@@ -11,7 +11,7 @@
 [Unit]
 Description=Podman tacticalrmm.service
 Wants=tactical-init.service tactical-websockets.service tactical-celerybeat.service tactical-celery.service
-Requires=postgresql-app.service redis-app.service  tactical-nats.service tactical-backend.service  tactical-frontend.service mongodb-app.service  meshcentral-app.service
+Requires=postgresql-app.service redis-app.service   mongodb-app.service  
 Before=postgresql-app.service redis-app.service mongodb-app.service meshcentral-app.service tactical-init.service tactical-nats.service tactical-backend.service tactical-websockets.service tactical-frontend.service tactical-celerybeat.service tactical-celery.service
 
 [Service]
@@ -25,6 +25,7 @@ ExecStartPre=/usr/bin/podman pod create --infra-conmon-pidfile %t/tacticalrmm.pi
     --name tacticalrmm \
     --publish 127.0.0.1:${TCP_PORT}:8080 \
     --publish 127.0.0.1:${API_TCP_PORT}:8080 \
+    --publish 127.0.0.1:${MESH_TCP_PORT}:8080 \
     --replace
 ExecStart=/usr/bin/podman pod start --pod-id-file %t/tacticalrmm.pod-id
 ExecStop=/usr/bin/podman pod stop --ignore --pod-id-file %t/tacticalrmm.pod-id -t 10
