--- a/imageroot/systemd/user/tactical-frontend.service
+++ b/imageroot/systemd/user/tactical-frontend.service
@@ -19,7 +19,7 @@ ExecStart=/usr/bin/podman run --conmon-pidfile %t/tactical-frontend.pid \
     --pod-id-file %t/tacticalrmm.pod-id --replace -d --name tactical-frontend \
     --volume tactical_data:/opt/tactical:Z \
    --env-file=%S/state/tactical.env \
-    ${TACTICAL_IMAGE}
+    ${TACTICAL_FRONTEND_IMAGE}
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/tactical-frontend.ctr-id -t 10
 ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/tactical-frontend.ctr-id
 ExecReload=/usr/bin/podman kill -s HUP tactical-frontend
